# arcade

./: Cargo.toml  README.md
assets/: pistol.txt
src/: app.rs  hud.rs  main.rs  menu.rs
src/games/: aim.rs  chimp_test.rs  fps.rs  mod.rs  navigation.rs  number_memory.rs  reaction.rs  sequence.rs  typing_game.rs  verbal_memory.rs  visual_memory.rs
