[package]
name = "arcade"
version = "0.1.0"
edition = "2024"
authors = ["Rohan Adwankar <rohan.adwankar@gmail.com>"]
description = "Games with vim motion controls in the terminal"
repository = "https://github.com/RohanAdwankar/arcade"
license = "MIT"
keywords = ["game", "vim", "memory", "nvim", "typing"]

[dependencies]
crossterm = "0.27"
once_cell = "1.19"
rand = "0.8"
ratatui = { version = "0.27", default-features = false, features = ["crossterm"] }
unicode-segmentation = "1.11"
dirs = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
